--- a/mobile.css
+++ b/mobile.css
@@ -24,11 +24,10 @@
     }
     .card{
         background-color: #fff;
-        margin: 3rem 3rem;
-        height: 18rem;
-        width: 21rem; 
+        height: 10rem;
+        width: 25rem; 
         overflow-y: scroll;
-        margin-top: 5rem;
+        margin-top: 1rem;
         box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.22);
       }
       .operations button{
@@ -38,17 +37,12 @@
       .operations, .editbtn, .deletbtn{
        font-size: 0.9rem;
       }
-      /* .card{
-       align-items: center;
-       margin: 2rem;
-      } */
       .card-container{
-        display: block;
-       align-items: center;
+        display: inline-block;
+
       }
       .card textarea{
-        height: 13rem;
+        height: 5rem;
         width: 95%;
-        
       }
 }
