--- a/mobile.css
+++ b/mobile.css
@@ -25,7 +25,7 @@
     .card{
         background-color: #fff;
         height: 10rem;
-        width: 25rem; 
+        width: 28rem; 
         overflow-y: scroll;
         margin-top: 1rem;
         box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.22);
@@ -39,10 +39,16 @@
       }
       .card-container{
         display: inline-block;
-
       }
       .card textarea{
+        margin-top: 1rem;
         height: 5rem;
         width: 95%;
+        padding: 0 1rem;
       }
+      .operations, .editbtn, .deletbtn{
+        font-size: 1rem;
+        border: none;
+        margin: 0.5rem;
+       }
 }
