--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html{
     display: inline-block;
     position: relative;
     transition: 0.5s;
-    font: 1.5rem;
+    font: 1rem;
   }
   
   .button span:after {
@@ -78,11 +78,11 @@ html{
 
   .card{
     background-color: #fff;
-    margin: 3rem;
+    margin: 1rem;
     height: 15rem;
     width: 24rem; 
     overflow-y: scroll;
-    margin-top: 5rem;
+    margin-top: 3rem;
     box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.22);
   }
   .operations button{
@@ -142,11 +142,10 @@ html{
   .main{
     font-family: inherit;
     height: 16rem;
-    width: auto;
     border-radius: 10px;
     font-weight: 600;
-    margin: 1rem 0.5rem;
-    padding: 2rem;
+    margin: 2rem 0;
+    padding: 1rem 2rem;
     font-size: 1.5rem;
 
   }
